# fb2-clean

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  make_macos_app_and_dmg.zsh
.github/workflows/: cross_builds.yml  release.yml  tests.yml
src/: clean_xml.rs  cli.rs  config.rs  gui.rs  i18n.rs  lib.rs  main.rs  main_gui.rs  remove_xml_tags.rs
src/cli/: logger.rs  parser.rs
src/config/: input.rs  output.rs  parser.rs  run.rs  tags.rs
src/gui/: logger.rs
src/i18n/: eng.rs  pubs.rs  rus.rs
tests/: common.rs  input.rs  output.rs  parse.rs  run.rs
